--- a/Pokedex/Cell/SearchCollectionViewCell.xib
+++ b/Pokedex/Cell/SearchCollectionViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -12,17 +12,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SearchCollectionViewCell" id="gTV-IL-0wX" customClass="SearchCollectionViewCell" customModule="Pokedex" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="312" height="49"/>
+            <rect key="frame" x="0.0" y="0.0" width="312" height="42"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="312" height="49"/>
+                <rect key="frame" x="0.0" y="0.0" width="312" height="42"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S71-e6-Gtr">
-                        <rect key="frame" x="0.0" y="0.0" width="312" height="49"/>
+                        <rect key="frame" x="0.0" y="0.0" width="312" height="42"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pokemon não encontrado" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FV2-zy-IPP">
-                                <rect key="frame" x="58.666666666666657" y="14" width="195" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pokemon não encontrado" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FV2-zy-IPP">
+                                <rect key="frame" x="10" y="10" width="292" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -30,8 +30,9 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemCyanColor"/>
                         <constraints>
-                            <constraint firstItem="FV2-zy-IPP" firstAttribute="centerX" secondItem="S71-e6-Gtr" secondAttribute="centerX" id="980-jT-VF9"/>
-                            <constraint firstItem="FV2-zy-IPP" firstAttribute="centerY" secondItem="S71-e6-Gtr" secondAttribute="centerY" id="Erl-Cg-3lU"/>
+                            <constraint firstItem="FV2-zy-IPP" firstAttribute="leading" secondItem="S71-e6-Gtr" secondAttribute="leading" constant="10" id="9A1-UM-rCY"/>
+                            <constraint firstAttribute="trailing" secondItem="FV2-zy-IPP" secondAttribute="trailing" constant="10" id="YLe-1R-5rF"/>
+                            <constraint firstItem="FV2-zy-IPP" firstAttribute="top" secondItem="S71-e6-Gtr" secondAttribute="top" constant="10" id="abl-cf-5dk"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -44,12 +45,12 @@
                 <constraint firstItem="S71-e6-Gtr" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="vMR-uy-xMn"/>
                 <constraint firstAttribute="bottom" secondItem="S71-e6-Gtr" secondAttribute="bottom" id="yCz-Zw-xcr"/>
             </constraints>
-            <size key="customSize" width="312" height="49"/>
+            <size key="customSize" width="312" height="42"/>
             <connections>
                 <outlet property="backGroundView" destination="S71-e6-Gtr" id="F9y-BF-Raf"/>
                 <outlet property="pokemonFaliedLabel" destination="FV2-zy-IPP" id="zMY-8a-xSF"/>
             </connections>
-            <point key="canvasLocation" x="223.07692307692307" y="35.900473933649288"/>
+            <point key="canvasLocation" x="223.07692307692307" y="33.412322274881518"/>
         </collectionViewCell>
     </objects>
     <resources>
