--- a/Pokedex/PokemonSelected/pokemonSelected.storyboard
+++ b/Pokedex/PokemonSelected/pokemonSelected.storyboard
@@ -132,13 +132,16 @@
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="50x-p5-15w">
                                 <rect key="frame" x="297" y="69" width="76" height="46"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="76" id="Cbm-E1-HI7"/>
                                     <constraint firstAttribute="height" constant="46" id="G7S-XZ-3Dq"/>
                                 </constraints>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="star" catalog="system"/>
+                                <buttonConfiguration key="configuration" style="plain" image="star" catalog="system">
+                                    <color key="baseForegroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </buttonConfiguration>
                                 <connections>
                                     <action selector="tappedStarButton:" destination="EfK-HS-OBD" eventType="touchUpInside" id="PKD-ke-0wx"/>
                                 </connections>
