--- a/Pokedex/Features/PokemonSelected/pokemonSelected.storyboard
+++ b/Pokedex/Features/PokemonSelected/pokemonSelected.storyboard
@@ -13,7 +13,7 @@
         <!--Pokemon Selected Vc-->
         <scene sceneID="FSK-3g-4HI">
             <objects>
-                <viewController storyboardIdentifier="pokemon" id="EfK-HS-OBD" customClass="PokemonSelectedVc" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="pokemonSelectedIdentifier" id="EfK-HS-OBD" customClass="PokemonSelectedVc" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xZc-em-SYW">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -125,7 +125,7 @@
                                     <constraint firstItem="o4R-Ro-HrG" firstAttribute="top" secondItem="CJ4-9Y-qVh" secondAttribute="top" constant="113" id="whk-9e-KyU"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IC3-T9-cyx">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IC3-T9-cyx">
                                 <rect key="frame" x="10" y="274" width="373" height="235"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="235" id="xqL-WY-gjd"/>
