--- a/Pokedex/Cell/SearchCollectionViewCell.xib
+++ b/Pokedex/Cell/SearchCollectionViewCell.xib
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -28,7 +27,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemCyanColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="FV2-zy-IPP" firstAttribute="leading" secondItem="S71-e6-Gtr" secondAttribute="leading" constant="10" id="9A1-UM-rCY"/>
                             <constraint firstAttribute="trailing" secondItem="FV2-zy-IPP" secondAttribute="trailing" constant="10" id="YLe-1R-5rF"/>
@@ -53,9 +52,4 @@
             <point key="canvasLocation" x="223.07692307692307" y="33.412322274881518"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <systemColor name="systemCyanColor">
-            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-    </resources>
 </document>
