--- a/Pokedex/Error/ErrorCollectionViewCell.xib
+++ b/Pokedex/Error/ErrorCollectionViewCell.xib
@@ -33,15 +33,18 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="o3y-1T-GpO"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ew8-bU-9Ja">
                                 <rect key="frame" x="20" y="85" width="255" height="35"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" red="0.74117654560000001" green="0.36470589040000001" blue="0.25098040700000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Tentar novamente"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Tentar novamente">
+                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
                                 <connections>
                                     <action selector="tappedTryAgainButton:" destination="gTV-IL-0wX" eventType="touchUpInside" id="iOK-Zg-974"/>
                                 </connections>
