--- a/Pokedex/Favorites/Favorites.storyboard
+++ b/Pokedex/Favorites/Favorites.storyboard
@@ -17,12 +17,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e8U-Ha-dFV">
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="foa-MM-MaP">
                                 <rect key="frame" x="0.0" y="117" width="390" height="717"/>
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="JeD-aU-e5Q">
                                         <rect key="frame" x="10" y="15" width="370" height="612"/>
-                                        <color key="backgroundColor" red="0.54901963470000004" green="0.83137255909999996" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Xrj-3i-dEA">
                                             <size key="itemSize" width="128" height="128"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -32,7 +36,7 @@
                                         <cells/>
                                     </collectionView>
                                 </subviews>
-                                <color key="backgroundColor" red="0.5474519175" green="0.83142414239999995" blue="0.95929333120000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="JeD-aU-e5Q" firstAttribute="leading" secondItem="foa-MM-MaP" secondAttribute="leading" constant="10" id="1uY-aM-rPZ"/>
                                     <constraint firstAttribute="trailing" secondItem="JeD-aU-e5Q" secondAttribute="trailing" constant="10" id="LhF-vP-BY6"/>
@@ -64,14 +68,18 @@
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="te4-3d-yPy"/>
-                        <color key="backgroundColor" systemColor="systemCyanColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="f5F-pH-Z6a" firstAttribute="leading" secondItem="te4-3d-yPy" secondAttribute="leading" id="1IL-6a-2SS"/>
                             <constraint firstAttribute="bottom" secondItem="f5F-pH-Z6a" secondAttribute="bottom" id="275-g1-wP4"/>
+                            <constraint firstAttribute="bottom" secondItem="e8U-Ha-dFV" secondAttribute="bottom" id="B6W-eg-QtI"/>
                             <constraint firstItem="5cc-A7-f4c" firstAttribute="top" secondItem="te4-3d-yPy" secondAttribute="top" constant="20" id="EZW-df-JQy"/>
+                            <constraint firstItem="e8U-Ha-dFV" firstAttribute="top" secondItem="axv-Sf-WwV" secondAttribute="top" id="Fys-gs-s26"/>
                             <constraint firstItem="5cc-A7-f4c" firstAttribute="leading" secondItem="te4-3d-yPy" secondAttribute="leading" constant="115" id="Okm-4k-3xz"/>
                             <constraint firstItem="foa-MM-MaP" firstAttribute="top" secondItem="te4-3d-yPy" secondAttribute="top" constant="70" id="Ujm-ZL-WIv"/>
                             <constraint firstItem="te4-3d-yPy" firstAttribute="trailing" secondItem="5cc-A7-f4c" secondAttribute="trailing" constant="115" id="bLw-YI-14M"/>
+                            <constraint firstItem="e8U-Ha-dFV" firstAttribute="leading" secondItem="te4-3d-yPy" secondAttribute="leading" id="fHt-qC-KgF"/>
+                            <constraint firstItem="e8U-Ha-dFV" firstAttribute="trailing" secondItem="te4-3d-yPy" secondAttribute="trailing" id="i6s-lY-Va6"/>
                             <constraint firstItem="f5F-pH-Z6a" firstAttribute="top" secondItem="axv-Sf-WwV" secondAttribute="top" id="ibG-YD-q8X"/>
                             <constraint firstItem="te4-3d-yPy" firstAttribute="trailing" secondItem="f5F-pH-Z6a" secondAttribute="trailing" id="jBQ-9d-rbr"/>
                             <constraint firstItem="foa-MM-MaP" firstAttribute="leading" secondItem="te4-3d-yPy" secondAttribute="leading" id="nmB-yi-ZGG"/>
@@ -82,6 +90,7 @@
                     <tabBarItem key="tabBarItem" title="Favoritos" image="favoritos" id="rD2-uy-gp4"/>
                     <connections>
                         <outlet property="collectionView" destination="JeD-aU-e5Q" id="Tly-Vh-9g4"/>
+                        <outlet property="gradientView" destination="e8U-Ha-dFV" id="HW8-Dg-kGO"/>
                         <outlet property="loadingView" destination="f5F-pH-Z6a" id="y5j-cj-IQW"/>
                         <outlet property="spinner" destination="cJD-al-gdj" id="ja2-Zi-o9L"/>
                     </connections>
@@ -93,8 +102,8 @@
     </scenes>
     <resources>
         <image name="favoritos" width="53" height="50"/>
-        <systemColor name="systemCyanColor">
-            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
