--- a/Pokedex/PokemonSelected/pokemonSelected.storyboard
+++ b/Pokedex/PokemonSelected/pokemonSelected.storyboard
@@ -273,7 +273,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XMS-cR-dL9" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="17.557251908396946" y="78.873239436619727"/>
+            <point key="canvasLocation" x="-329" y="87"/>
         </scene>
     </scenes>
     <resources>
